Renamed class for clarity and adjusted nav padding for correct horizontal spacing.

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -6,14 +6,14 @@ nav {
   justify-content: space-between;
   background-color: #4056A1;
   color: #FFFFFF;
-  padding: 1.5em;
+  padding: 0 1.5em;
 }
 
 .nav-title {
   font-family: "Bungee", sans-serif;
 }
 
-.right-text {
+.nav-tweet-btn {
   display: flex;
   margin-left: auto;
   flex-direction: column;
